<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="75dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/SelectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_a_workout_group"
        android:textSize="18sp"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/openWorkoutSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openUpperBodyWorkout"
        android:text="@string/upper_body_workout" />

    <Button
        android:id="@+id/openWorkoutPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openBackWorkout"
        android:text="@string/back_workout"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/openSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openCoreWorkout"
        android:text="@string/core_workout"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/openSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openLowerBodyWorkout"
        android:text="@string/lower_body_workout"
        android:layout_marginTop="16dp" />
</LinearLayout>
