<?xml version="1.0" encoding="utf-8"?>

<!---->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_sets_25_reps_russian_twists"
            android:layout_marginTop="50dp"/>

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_sets_50_reps_bicycles"
            android:layout_marginTop="50dp"/>

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_sets_2min_flutter_kicks"
            android:layout_marginTop="50dp"/>

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_sets_25_reps_heel_tap_situps"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FINISH"
            android:enabled="false"
            android:layout_marginTop="50dp"/> <!-- Initially disabled -->

    </LinearLayout>
</ScrollView>