<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="75dp">

    <EditText
        android:id="@+id/workoutInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_workout_plan"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="16dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/saveWorkoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_workout"
        android:onClick="saveWorkout"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/addReminderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_reminder"
        android:onClick="addCalendarReminder"/>

</LinearLayout>
